--- a/allproducts.html
+++ b/allproducts.html
@@ -274,7 +274,7 @@
 
 
     <!-- Start category section -->
-    <section id="newproduct-section" class="mt-0">
+    <section id="categoryall-section" class="mt-0">
         <div class="uk-container">
             <div class="row">
 
@@ -286,9 +286,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/m32.png" width="24" style="margin-right: 5px;"> Meat</p>
+                                        <p><img src="assets/img/nav_icon/m32.png" width="24" style="margin-left: -15px;"> Meat</p>
                                     </div>
                                 </div>
                             </a>
@@ -296,9 +296,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/f32.png" width="24" style="margin-right: 5px;"> Fish</p>
+                                        <p><img src="assets/img/nav_icon/f32.png" width="24" style="margin-left: -15px;"> Fish</p>
                                     </div>
                                 </div>
                             </a>
@@ -306,9 +306,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/vvv.png" width="24" style="margin-right: 5px;"> Vegetables</p>
+                                        <p><img src="assets/img/nav_icon/vvv.png" width="24" style="margin-left: -15px;"> Vegetables</p>
                                     </div>
                                 </div>
                             </a>
@@ -316,9 +316,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/fr322.png" width="24" style="margin-right: 5px;"> Fruits</p>
+                                        <p><img src="assets/img/nav_icon/fr322.png" width="24" style="margin-left: -15px;"> Fruits</p>
                                     </div>
                                 </div>
                             </a>
@@ -326,9 +326,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/e321.png" width="24" style="margin-right: 5px;"> Egg</p>
+                                        <p><img src="assets/img/nav_icon/e321.png" width="24" style="margin-left: -15px;"> Egg</p>
                                     </div>
                                 </div>
                             </a>
@@ -336,9 +336,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/s322.png" width="24" style="margin-right: 5px;"> Snacks</p>
+                                        <p><img src="assets/img/nav_icon/s322.png" width="24" style="margin-left: -15px;"> Snacks</p>
                                     </div>
                                 </div>
                             </a>
@@ -346,19 +346,9 @@
 
                         <div>
                             <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
+                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310;">
                                     <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/sd.png" width="24" style="margin-right: 5px;"> Beverages</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div>
-                            <a href="#">
-                                <div class="uk-card uk-card-default shadow-sm" style="border-radius: 3px; border-left: 1px solid #FFC310; font-size: 15px;">
-                                    <div class="uk-card-body my-0 py-3">
-                                        <p><img src="assets/img/nav_icon/sd.png" width="24" style="margin-right: 5px;"> Beverages</p>
+                                        <p><img src="assets/img/nav_icon/sd.png" width="24" style="margin-left: -15px;"> Beverages</p>
                                     </div>
                                 </div>
                             </a>
@@ -366,8 +356,8 @@
                         
                     </div>
 
-                    <a class="uk-position-center-left uk-position-small shadow-sm" href uk-slidenav-previous uk-slider-item="previous" style="background-color: rgba(255, 195, 16, 0.8); color: #fff; width: 30px; border-radius: 2px;"></a>
-                    <a class="uk-position-center-right uk-position-small shadow-sm" href uk-slidenav-next uk-slider-item="next" style="background-color: rgba(255, 195, 16, 0.8); color: #fff; width: 30px; border-radius: 2px;"></a>
+                    <a class="uk-position-center-left uk-position-small" href uk-slidenav-previous uk-slider-item="previous" style="color: #afafaf; width: 30px;"></a>
+                    <a class="uk-position-center-right uk-position-small" href uk-slidenav-next uk-slider-item="next" style="color: #afafaf; width: 30px;"></a>
 
                 </div>
 
