--- a/allproducts.html
+++ b/allproducts.html
@@ -383,7 +383,7 @@
                         </ul>
 
                         <div class="uk-float-right d-inline">
-                            <form class="uk-search uk-search-default" style="width: 280px; margin-top: -30px;">
+                            <form class="uk-search uk-search-default" style="width: 300px; margin-top: -30px;">
                                 <input class="uk-search-input" type="search" placeholder="Search products..." aria-label="Search" style="background-color: #fff; border-radius: 3px; border: 1px solid rgba(255, 195, 16, 0.5); font-size: 14px;">
                                 <button class="uk-search-icon" uk-search-icon></button>
                             </form>
@@ -403,7 +403,7 @@
         <div class="uk-container">
             <div class="row">
 
-                <div>
+                <div class="mb-1">
                     <form class="uk-search uk-search-default" style="width: 100%;">
                         <input class="uk-search-input" type="search" placeholder="Search products..." aria-label="Search" style="background-color: #fff; border-radius: 3px; border: 1px solid rgba(255, 195, 16, 0.5); font-size: 14px; margin-bottom: 10px;">
                         <button class="uk-search-icon" uk-search-icon></button>
