--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <title>Bazar Lagbe - Online Super Market</title>
+    <title>Home - Online Super Market</title>
     <meta name="keywords" content="HTML5 Template">
     <meta name="description" content="Bazar Lagbe">
     <meta name="author" content="p-themes">
@@ -323,7 +323,7 @@
 
             <div class="row pt-3" style="background-color: #fff; border-radius: 3px;">
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
-                    <a href="#">
+                    <a href="category/category.html">
                         <p class="uk-text-center"><img src="assets/img/meat.png" src="assets/img/seafood.png" class="mb-2"><br>
                         <span style="font-weight: 500;">Meat</span><br>
                         <small style="font-size: 12px; color: #919191;">25 Items</small>
@@ -412,7 +412,7 @@
 
         <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-5@l uk-child-width-1-5@xl uk-grid-small uk-grid-match" uk-grid>
             <div>
-                <a href="product.html">
+                <a href="product.html" target="_self">
                     <div class="uk-card uk-card-default mr-0 ml-0" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label px-2" style="background-color: #28A745; color: #fff; text-transform: none;">In Stock</div>
